--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,429 +1,254 @@
-.deals-offers-container {
-  padding: 0 20px 20px 20px; /*changes*/
+/*
+ * Copyright 2020 Adobe. All rights reserved.
+ * This file is licensed to you under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License. You may obtain a copy
+ * of the License at http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software distributed under
+ * the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR REPRESENTATIONS
+ * OF ANY KIND, either express or implied. See the License for the specific language
+ * governing permissions and limitations under the License.
+ */
+
+ :root {
+  /* Nexa colors */
+  --primary-main: #18171a;
+  --tertiary-white: #fff;
+  --tertiary-light-grey: #f2f2f2;
+  --tertiary-medium-grey: #b2b2b2;
+  --tertiary-deep-Grey: #767879;
+  --tertiary-black: #000;
+
+  /* AEM colors */
+  --link-color: #035fe6;
+  --link-hover-color: #136ff6;
+  --background-color: white;
+  --light-color: #eee;
+  --dark-color: #ccc;
+  --text-color: black;
+  --nav-background-color: #f2f2f2;
+
+  /* gradients */
+  --gradient-1: linear-gradient(60.18deg, #c9d3d7 3.71%, #ebebeb 104.51%);
+
+  /* fonts */
+  --body-font-family: "Fira Sans";
+  --heading-font-family: var(--body-font-family);
+  --fixed-font-family: "Fira Sans";
+
+  /* body sizes */
+  --body-font-size-m: 22px;
+  --body-font-size-s: 18px;
+  --body-font-size-xs: 16px;
+
+  /* heading sizes */
+  --heading-font-size-xxl: 48px;
+  --heading-font-size-xl: 40px;
+  --heading-font-size-l: 32px;
+  --heading-font-size-m: 24px;
+  --heading-font-size-s: 20px;
+  --heading-font-size-xs: 18px;
+
+  /* nav height */
+  --nav-height: 80px;
 }
 
-.immersive__wrapper-light {
-  color: #18171A;
-  background-color: white;
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  padding-top: 48px;
+@font-face {
+  font-family: roboto-fallback;
+  size-adjust: 100.06%;
+  ascent-override: 95%;
+  src: local("Arial");
+}
 
-  @media(min-width: 1024px) {
-      display: inherit;
-      text-align: center;  /*changes*/
+@media (width >= 900px) {
+  :root {
+    --heading-font-size-xxl: 60px;
+    --heading-font-size-xl: 48px;
+    --heading-font-size-l: 36px;
+    --heading-font-size-m: 30px;
+    --heading-font-size-s: 24px;
+    --heading-font-size-xs: 22px;
   }
 }
 
-.immersive__wrapper-light .immersive__content {
-  order: 1;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-
-
-  @media(min-width: 1024px) {
-      top: 110px;
-      left: 64px;
-      text-align: left;
-  } 
-}
-.heading-content{
-  @media(min-width: 1024px) {
-      display: flex;
-      align-items: flex-end;
-      text-align: left;
-  }
-} /*changes*/
-
-.immersive__wrapper-light .immersive__content h2 {
-  font-size: 32px;
-  font-weight: 600;
-  line-height: 40px;
-  letter-spacing: 0.64px;
+body {
+  font-size: var(--body-font-size-m);
   margin: 0;
-  max-width: 300px;
-
-  @media(min-width: 1024px) {
-      margin: 0;
-      font-size: 64px;
-      font-style: normal;
-      font-weight: 600;
-      line-height: 72px;
-      max-width: 640px;
-      letter-spacing: 1.28px;
-  }
-}
-
-.immersive__wrapper-light .immersive__content p {
-  color: var(--Primary-Main, #18171A);
-  font-family: "Fira Sans";
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 20px;
-  margin-top: 48px;
-  margin-bottom: 48px;
-  max-width: 236px;
-  display: block;
-
-  @media(min-width:1024px) {
-      margin-top: 12px;
-      font-size: 18px;
-      font-style: normal;
-      font-weight: 300;
-      line-height: 24px;
-      margin-bottom: 0;
-      max-width: 280px;        
-  }
-}
-
-.immersive__wrapper-light .sub-container .immersive__content p {
-  color: inherit;
-  font-family: "Fira Sans";
-  font-size: 12px;
-  font-style: normal;
-  font-weight: 400;
-  
-  line-height: 20px;
-  margin-top: 16px;
-  margin-bottom: 24px;
-  max-width: 236px;
-  display: block;
-
-  @media(min-width:1024px) {
-      margin-top: 12px;
-      font-size: 18px;
-      font-style: normal;
-      font-weight: 300;
-      line-height: 24px;
-      margin-bottom: 0;
-      max-width: 280px;        
-  }
-}
-
-.immersive__wrapper .immersive__content p strong {
-  margin: 0;
-  font-size: 24px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 32px;
-  display: block;
-
-  @media (min-width:1024px) {
-      margin-top: 72px;
-      font-size: 16px;
-      font-weight: 500;
-      line-height: 20px;
-  }
- 
-}
-
-.immersive__wrapper .immersive__content .immersive__action {
-  margin-top: 24px;
-}
-
-.immersive__wrapper-light .sub-container .immersive__content .immersive__action a {
-  display: flex;
-  padding: 8px 12px;
-  background-color: #ffffff;
-  justify-content: center;
-  align-items: center;
-  align-self: stretch;
-  border: none;
-  font-size: 16px;
-  color: #18171A;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 24px;
-  border-radius: unset;
-  text-decoration: none;
-
-  @media(min-width: 1024){
-      font-size: 18px;
-      padding: 8px 18px 8px 20px;
-      margin: 0;
-  }
-  
-}
-
-.immersive__wrapper-light .immersive__action-btn {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding-top: 24px;
-  position: absolute;
-  right: 0;
-  left: 0;
-  top: 100%;
-
-  @media (min-width:1024px) {
-      position: absolute;
-      right: 0;
-      top: auto;
-      left: auto;
-  }
-}    /*changes*/
-
-.immersive__wrapper-light .immersive__action {
-  display: inline-flex;
-  align-items: center;
-  margin-top: 24px;
-
-  @media (min-width: 1024) {
-      position: absolute;        
-  }
-}
-
-.immersive__wrapper-light .sub-container {
-  order: 2;
-  display: flex;
-}
-
-@media (min-width: 1024px) {
-  .immersive__wrapper-light .sub-container {
-      order: 2;
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 24px;
-      margin-top: 48px;
-  }
-} /*changes*/
-
-
-.immersive__wrapper-light .sub-container .left-container {
+  font-family: var(--body-font-family);
+  line-height: 1.6;
+  color: var(--text-color);
+  background-color: var(--background-color);
   display: none;
-
-  @media(min-width: 1024px) {
-      display: flex;
-      position: relative;
-  }
-}
-.immersive__wrapper-light .sub-container .left-container img {
-  position: relative;
-  width: 100%;
-  max-width: 100%;
-  height: auto;
-  gap: 20px;
 }
 
-.immersive__wrapper-light .sub-container .left-container .teaser__description{
-  font-size: 12px;
-}
-
-.immersive__wrapper-light .sub-container .left-container .teaser__action-btn{
-  position: absolute;
-  right: 0;
-  bottom: 5%;
-} /*newly added*/
-
-.immersive__wrapper-light .sub-container .left-container .teaser__action-btn a{
-      display: flex;
-      padding: 8px 12px;
-      background-color: #ffffff;
-      justify-content: center;
-      align-items: center;
-      border: none;
-      font-size: 16px;
-      color: #18171A;
-      font-style: normal;
-      font-weight: 400;
-      line-height: 24px;
-      border-radius: unset;
-      text-decoration: none;
-  
-      @media(min-width: 1024){
-          font-size: 18px;
-          padding: 8px 18px 8px 20px;
-          margin: 0;
-      }
-}/*newly added*/
-
-.immersive__wrapper-light .sub-container .right-container {
-  position: relative;
+body.appear {
   display: block;
 }
 
-.immersive__wrapper-light .sub-container .right-container .right-container-subcontainer {
-  /* display: flex;
-  align-items: flex-end; */
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 16px;
-  width: 100%; /*check*/
-}/*changes*/
-
-.img-over-text{
-  @media (min-width: 1024){
-      padding: 32px 0 0 16px;
-  }
-  
+header {
+  height: var(--nav-height);
 }
 
-.immersive__wrapper-light .sub-container .right-container .right-container__content {
-  position: absolute;
-  left: 5%;
-  top: 2px;
-  gap: 24px;
-  color: white;
-  z-index: 1;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: var(--heading-font-family);
+  font-weight: 600;
+  line-height: 1.25;
+  margin-top: 1em;
+  margin-bottom: 0.5em;
+  scroll-margin: calc(var(--nav-height) + 1em);
 }
 
-.immersive__wrapper-light .sub-container .right-container .right-container__card-1 img {
-  width: 100%;
-  max-width: 100%;
-  height: auto;
-  clip-path: polygon(100% 0, 100% 44%, 100% 90%, 59% 91%, 52% 100%, 0 100%, 0 0);
+h1 {
+  font-size: var(--heading-font-size-xxl);
+}
+h2 {
+  font-size: var(--heading-font-size-xl);
+}
+h3 {
+  font-size: var(--heading-font-size-l);
+}
+h4 {
+  font-size: var(--heading-font-size-m);
+}
+h5 {
+  font-size: var(--heading-font-size-s);
+}
+h6 {
+  font-size: var(--heading-font-size-xs);
 }
 
-.immersive__wrapper-light .sub-container .right-container .right-container__card-1 picture::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 50%;
-  height: 99%;
-  background: linear-gradient(to right, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0));
-  z-index: 1; 
-  /* Ensure the gradient is above the image */
-  pointer-events: none; /* Ensure the gradient doesn't block interactions */
-} /*newly added */
-
-.immersive__wrapper-light .sub-container .right-container .right-container__card-1{
-  position: relative;
+p,
+dl,
+ol,
+ul,
+pre,
+blockquote {
+  margin-top: 1em;
+  margin-bottom: 1em;
 }
 
-.light-teaser.buyers-guide-teaser .teaser__card {
-  backdrop-filter: blur(20px);
-  padding: 16px;
-  text-align: left;
-
-  @media(min-width: 1024px) {
-      padding: 32px 32px 55px;
-  }
+code,
+pre {
+  font-family: var(--fixed-font-family);
+  font-size: var(--body-font-size-s);
 }
 
-.light-teaser.buyers-guide-teaser .teaser__card.teaser-light {
-  background: var(--Gradients-Gradient-2, linear-gradient(225deg, #B3C4C7 -4.54%, #DAC8C6 115.1%));
-  color: #18171A;
-  clip-path: polygon(0 7%, 100% 7%, 100% 100%, 0% 100%);
+code {
+  padding: 0.125em;
 }
 
-.light-teaser.buyers-guide-teaser .teaser__card.teaser-dark {
-  background: var(--Primary-Main, #18171A);
-  color: white;
-  clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 36%, 0 6%, 16% 6%, 25% 0);
+pre {
+  overflow: scroll;
 }
 
-.light-teaser.buyers-guide-teaser .teaser__card.teaser-grey{
-  background: var(--Gradients-Gradient-4---60, linear-gradient(238deg, rgba(56, 79, 110, 0.60) -11.12%, rgba(91, 91, 91, 0.60) 111.5%));
-  color: white;
-  clip-path: polygon(54% 12%, 57% 0, 100% 0, 100% 100%, 0 100%, 0 12%);
+main pre {
+  background-color: var(--light-color);
+  padding: 1em;
+  border-radius: 0.25em;
+  overflow-x: auto;
+  white-space: pre;
 }
 
-.sub-container .left-container .light-teaser.buyers-guide-teaser .teaser__card{
-  position: absolute;
-  z-index: 1;
-  width: 544px;
-  height: 172px;
-  left: 32px;
-  bottom: 32px;
+/* links */
+a:any-link {
+  /* color: var(--link-color); */
+  text-decoration: none;
 }
 
-.light-teaser.buyers-guide-teaser .teaser__card .teaser__actions a::before {
-  content: '';
-  background-image: url('./images/white-slant-arrow.svg');
-  background-repeat: no-repeat;
-  background-size: contain;
-  width: 52px;
-  height: 52px;
-}
-
-.light-teaser.buyers-guide-teaser .primary__btn {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 4px;
+/*
+a:hover {
   text-decoration: underline;
-  text-underline-offset: 2px;
-  padding: 0;
-
-  font-family: 'Fira Sans';
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 20px;
-  order: 2;
-  color: inherit;
-  padding-bottom: 2px;
-  background-color: transparent;
-
-  @media(min-width:1024px) {
-      font-size: 12px;
-      line-height: 16px;
-      text-underline-offset: 1px;
-      padding-bottom: 1px;
-  }
+  color: var(--link-hover-color);
 }
+*/
 
-.light-teaser.buyers-guide-teaser .teaser__card.teaser-dark .teaser__actions a::before {
-  background-image: url('./images/white-slant-arrow.svg');
-}
-
-.light-teaser.buyers-guide-teaser .teaser__card.teaser-light .teaser__actions a::before {
-  background-image: url('./images/arrow.svg');
-}
-
-.light-teaser.buyers-guide-teaser .teaser__content {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 12px;
-}
-
-.light-teaser.buyers-guide-teaser .teaser__info .teaser__title {
-  font-family: "Kepler Std";
-  font-size: 18px;
+/* buttons */
+/*
+a.button:any-link,
+button {
+  font-family: var(--body-font-family);
+  display: inline-block;
+  box-sizing: border-box;
+  text-decoration: none;
+  border: 2px solid transparent;
+  padding: 5px 30px;
+  text-align: center;
   font-style: normal;
   font-weight: 600;
-  line-height: 22px;
-  letter-spacing: 0.36px;
-  padding: 16px 0px 16px 0px;
-
-  /* @media (min-width: 1024) {
-      font-size: 32px;
-  } */
+  cursor: pointer;
+  color: var(--background-color);
+  background-color: var(--link-color);
+  margin: 16px 0;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  border-radius: 30px;
 }
 
-.light-teaser.buyers-guide-teaser .teaser__info .teaser__description {
-  margin-top: 16px;
-  font-size: 12px;
-  line-height: 16px;
-  width: 77%;
-  font-weight: 400;
+a.button:hover,
+a.button:focus,
+button:hover,
+button:focus {
+  background-color: var(--link-hover-color);
+  cursor: pointer;
+}
 
+button:disabled,
+button:disabled:hover {
+  background-color: var(--light-color);
+  cursor: unset;
+}
 
-  @media(min-width:1024px) {
-      font-size: 18px;
-      line-height: 24px;
-      width: 100%;
-     
+a.button.secondary,
+button.secondary {
+  background-color: unset;
+  border: 2px solid currentcolor;
+  color: var(--text-color);
+}
+
+main img {
+  max-width: 100%;
+  width: auto;
+  height: auto;
+}
+
+.icon {
+  display: inline-block;
+  height: 24px;
+  width: 24px;
+}
+
+.icon img {
+  height: 100%;
+  width: 100%;
+}
+*/
+
+/* sections
+main .section {
+  padding: 64px 16px;
+}
+
+@media (width >= 600px) {
+  main .section {
+    padding: 64px 32px;
   }
 }
 
-.light-teaser.buyers-guide-teaser .teaser__info.left-img-over-text .teaser__title{
-  @media(min-width:1024px) {
-      font-size: 32px;
+@media (width >= 900px) {
+  .section > div {
+    max-width: 1200px;
+    margin: auto;
   }
-}/*newly added*/
-
-.light-teaser.buyers-guide-teaser .teaser__info.left-img-over-text .teaser__description{
-  @media(min-width:1024px) {
-      font-size: 16px;
-      line-height: 24px;
-      width: 67%;
-  }
-}/*newly added */
+} */
+/* section metadata
+main .section.light,
+main .section.highlight {
+  background-color: var(--light-color);
+}
+*/
