--- a/blocks/offers/offers.css
+++ b/blocks/offers/offers.css
@@ -313,7 +313,7 @@
   width: 100%;
   max-width: 100%;
   height: auto;
-  clip-path: polygon(100% 0, 100% 44%, 100% 90%, 59% 91%, 52% 100%, 0 100%, 0 0);
+  /* clip-path: polygon(100% 0, 100% 44%, 100% 90%, 59% 91%, 52% 100%, 0 100%, 0 0); */
 }
 
 .immersive__wrapper-light .sub-container .right-container .right-container__card-1 picture::before {
@@ -357,13 +357,13 @@
 .light-teaser.buyers-guide-teaser .teaser__card.teaser-dark {
   background: var(--Primary-Main, #18171A);
   color: white;
-  clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 36%, 0 6%, 16% 6%, 25% 0);
+  /* clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 36%, 0 6%, 16% 6%, 25% 0); */
 }
 
 .light-teaser.buyers-guide-teaser .teaser__card.teaser-grey{
   background: var(--Gradients-Gradient-4---60, linear-gradient(238deg, rgba(56, 79, 110, 0.60) -11.12%, rgba(91, 91, 91, 0.60) 111.5%));
   color: white;
-  clip-path: polygon(54% 12%, 57% 0, 100% 0, 100% 100%, 0 100%, 0 12%);
+  /* clip-path: polygon(54% 12%, 57% 0, 100% 0, 100% 100%, 0 100%, 0 12%); */
 }
 /* MY CHANGES*/
 .sub-container .left-container .light-teaser.buyers-guide-teaser .teaser__card{
