--- a/blocks/offers/offers.css
+++ b/blocks/offers/offers.css
@@ -104,7 +104,7 @@
     font-size: 12px;
     font-style: normal;
     font-weight: 400;
-    
+    margin:0;
     line-height: 20px;
     margin-top: 16px;
     max-width: 236px;
@@ -112,6 +112,7 @@
   
     @media(min-width:1024px) {
         margin-top: 12px;
+        margin-bottom: 20px;
         font-size: 16px;
         font-style: normal;
         font-weight: 300;
